--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -47,6 +47,12 @@
                         <label for="image" class="form-label mb-0">Profile Picture</label>
                         <a href="/remove/<%= user._id %>" class="btn btn-sm btn-danger">Remove</a>
                     </div>
+                    <div>
+
+                        <h1>jai baba ki</h1>
+
+                    </div>
+
                     <input type="file" name="image" id="image" class="form-control mt-2"><br>
                     <!-- Save Button -->
                     <button type="submit" class="btn btn-primary">Save</button>
